Eevee assert in shader group sorting when opening file #76730

Closed
opened 2020-05-14 03:25:49 +02:00 by Brecht Van Lommel · 6 comments

System Information
Operating system: Linux-5.4.0-29-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro RTX 5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.83 (sub 16), hash: ec324d8

Short description of error
Assert in Eevee, from #74424#884885

Exact steps for others to reproduce the error
Open attached file in a debug build.
blender-2.82-crash.blend

An assert is hit in this file:

libc.so.6!raise (Unknown Source:0)
libc.so.6!abort (Unknown Source:0)
DRW_pass_sort_shgroup_z(DRWPass * pass) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager_data.c:1910)
eevee_draw_scene(void * vedata) (/home/jacques/blender-git/blender/source/blender/draw/engines/eevee/eevee_engine.c:200)
drw_engines_draw_scene() (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager.c:1042)
DRW_draw_render_loop_ex(struct Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager.c:1531)
DRW_draw_view(const bContext * C) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager.c:1417)
view3d_draw_view(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1561)
view3d_main_region_draw(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1585)
ED_region_do_draw(bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/screen/area.c:534)
wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:634)
wm_draw_window(bContext * C, wmWindow * win) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:770)
wm_draw_update(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:952)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:424)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:518)

It's this assert:

/* To be sorted a shgroup needs to have at least one draw command.  */
BLI_assert(handle != 0);
**System Information** Operating system: Linux-5.4.0-29-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro RTX 5000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.83 (sub 16), hash: `ec324d8` **Short description of error** Assert in Eevee, from #74424#884885 **Exact steps for others to reproduce the error** Open attached file in a debug build. [blender-2.82-crash.blend](https://archive.blender.org/developer/F8534142/blender-2.82-crash.blend) An assert is hit in this file: ``` libc.so.6!raise (Unknown Source:0) libc.so.6!abort (Unknown Source:0) DRW_pass_sort_shgroup_z(DRWPass * pass) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager_data.c:1910) eevee_draw_scene(void * vedata) (/home/jacques/blender-git/blender/source/blender/draw/engines/eevee/eevee_engine.c:200) drw_engines_draw_scene() (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager.c:1042) DRW_draw_render_loop_ex(struct Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager.c:1531) DRW_draw_view(const bContext * C) (/home/jacques/blender-git/blender/source/blender/draw/intern/draw_manager.c:1417) view3d_draw_view(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1561) view3d_main_region_draw(const bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1585) ED_region_do_draw(bContext * C, ARegion * ar) (/home/jacques/blender-git/blender/source/blender/editors/screen/area.c:534) wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:634) wm_draw_window(bContext * C, wmWindow * win) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:770) wm_draw_update(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:952) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:424) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:518) ``` It's this assert: ``` /* To be sorted a shgroup needs to have at least one draw command. */ BLI_assert(handle != 0); ```
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem

Added subscriber: @Walles

Added subscriber: @Walles

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 6eb00fb02e

This issue was referenced by 6eb00fb02e9b8e3f8d3c7e3f9fd162faa36efe34

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-05-18 16:59:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76730
No description provided.