Fix T76730 DRW: Sorting of empty shading groups.

This is to fix an assert in EEVEE caused by a transparent shading group
that is create but not populated by any drawcall.